--- a/views/adhesivelabels.ejs
+++ b/views/adhesivelabels.ejs
@@ -1,6 +1,6 @@
 <%- include("header") -%>
 <img src="img/BANNER.png" alt=""><br><br>
-<h2>ADHESIVE LABELS</h2>
+<h2>PRODUCT LABELS</h2>
 <div class="product-item" style="background-color:#f7f7f7">
   <div class="container">
     <div class="row align-items-center">
@@ -8,15 +8,16 @@
         <img src="img/adhesive2.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>ADHESIVE LABELS</h2>
-        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Designed Using Only High Quality Components.  </p>
+        <h2>PRODUCT LABELS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Made Using Only Best Quality Adhesive Paper.  </p>
         <h3>Features:</h3>
-        <p>1. Long Lasting </p>
-        <p>2. Fine Finish </p>
-        <p>3. Various Size </p>
-        <p>4. Printed </p>
-        <p>5. Easy To Use</p>
-        <p>6. Water Proof </p>
+        <p>1. Material Used - Paper, Polyester, Grey Ployester</p>
+        <p>2. Long Lasting </p>
+        <p>3. Fine Finish </p>
+        <p>4. Various Size </p>
+        <p>5. Printed </p>
+        <p>6. Easy To Use</p>
+        <!-- <p>6. Water Proof </p> -->
         <h3>Available:</h3>
         <p>1. 2/1 Inch </p>
         <p>2. 4/6 Inch </p>
@@ -35,7 +36,7 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>ADHESIVE PLAIN LABELS</h2>
-        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Designed Using Only High Quality Components.  </p>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Made Using Only Best Quality Adhesive Paper.  </p>
         <h3>Features:</h3>
         <p>1. Long Lasting </p>
         <p>2. Fine Finish </p>
@@ -54,7 +55,7 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>ADHESIVE PLAIN LABELS</h2>
-        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Designed Using Only High Quality Components.  </p>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Made Using Only Best Quality Adhesive Paper.  </p>
         <h3>Features:</h3>
         <p>1. Long Lasting </p>
         <p>2. Fine Finish </p>
