--- a/views/barcodeprinters.ejs
+++ b/views/barcodeprinters.ejs
@@ -5,6 +5,27 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/p2.png">
+      </div>
+      <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
+        <h2>BARCODE PRINTERS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Barcode Printers In The Nation. These Products Are Highly Demanded In The Market For Their High Performance Features. </p>
+        <h3>Features:</h3>
+        <p>1. Long Lasting </p>
+        <p>2. Easy Installation </p>
+        <p>3. Glossy Smooth Surface </p>
+        <p>4. High Speed </p>
+        <p>5. Clear Print</p>
+        <!-- <p>6. Attractive Pattern </p> -->
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="product-item" style="background-color:#f7f7f7">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
         <img src="img/bprinter1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
@@ -21,7 +42,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <div class="product-item">
   <div class="container">
     <div class="row align-items-center">
@@ -37,7 +58,7 @@
         <p>3. Glossy Smooth Surface </p>
         <p>4. High Speed </p>
         <p>5. Clear Print</p>
-        <p>6. Attractive Pattern </p>
+        <!-- <p>6. Attractive Pattern </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -58,7 +79,7 @@
         <p>3. Glossy Smooth Surface </p>
         <p>4. High Speed </p>
         <p>5. Clear Print</p>
-        <p>6. Attractive Pattern </p>
+        <!-- <p>6. Attractive Pattern </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
