--- a/views/main.ejs
+++ b/views/main.ejs
@@ -18,14 +18,14 @@
 						<div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top3.png"></div>
 						</div>
-						<div class="single-testimonial ">
+						<!-- <div class="single-testimonial ">
 							<div class="slider-img-2"><img src="img/top4.png"></div>
+						</div> -->
+						<div class="single-testimonial ">
+							<div class="slider-img-2"><img src="img/top5.jpg"></div>
 						</div>
 						<div class="single-testimonial ">
-							<div class="slider-img-2"><img src="img/top5.png"></div>
-						</div>
-						<div class="single-testimonial ">
-							<div class="slider-img-2"><img src="img/top6.png"></div>
+							<div class="slider-img-2"><img src="img/top6.jpg"></div>
 						</div>
 
 					</div>
@@ -42,23 +42,23 @@
 			<hr width="250px">
 			<div class="service_area">
 				<center>
-					<p style=" word-spacing: 12px;font-size:16px;">Growing demand of Self Adhesive Stickers and their fast growth encouraged us to enter in barcode sticker, product labels and promotional labels manufacturing industries. Our prime focus is Quality and customer satisfaction .
-						Therefore , we as a barcode sticker manufacturer offer a wide range of superb barcode stickers, Barcode Printers, Thermal Transfer Ribbon. Founded with an aim to offer the superior quality products and services, we leave no stone unturned
+					<p style=" word-spacing: 12px;font-size:18px;">Growing demand of Self Adhesive Stickers and their fast growth encouraged us to enter in barcode stickers, product labels and promotional labels manufacturing industries <strong>20 years ago.</strong> Our prime focus is Quality and customer satisfaction .
+						Therefore , we as a self adhesive label manufacturer offer a wide range of best quality pre-printed Barcode Stickers and Thermal Transfer Ribbon. Also, deals in barcode printers and scanners. Established with an aim to offer the superior quality products and services, we leave no stone unturned
 						towards assuring the same. We have earned a respectable name for ourselves as a barcode sticker and product labels Manufacturer. Further, we make full efforts to maintain a large inventory for our products so that we are able to serve the requirements of
 						our clients at any given frame of time.</p>
 				</center>
 				<br>
 				<center>
-					<p style=" word-spacing: 12px;font-size:16px;">We Are Backed With The Modern Infrastructural Setup For Manufacturing Our Offered Range Of Products. We Have Hired A Team Of Highly Skilled Professionals, Who Are Carefully Appointed By
-						Keeping In Mind Their Knowledge In Their Respective Domains. Owing To The Better Quality Of Our Products And Customized Range, We Have Been Able To Earn High-Level Client Satisfaction. Our Expertise Conducting Various Research &
-						Development Activities Assists Us In Further Increase Our Technical Excellence. Moreover, We Are Backed By A Wide Connected Network For Delivering The Offered Products Safely At Clients End.</p><br>
+					<p style=" word-spacing: 12px;font-size:18px;">We are backed with the Modern Infrastructural Setup for manufacturing our offered range of products. We have hired a team of highly skilled professionals, who are carefully appointed by
+						keeping in mind their knowledge in their respective domains. Owing to the better quality of our products and customised range, we have been able to earn high-level client satisfaction. Our expertise conducting various Research &
+						Development activities assists us in further increase of our technical excellence. Moreover, we are backed by a wide connected network for delivering the offered products safely at clients end.</p><br>
 				</center>
 				<center><br>
 					<h2 style="font-size:24px;">Why Us?</h2>
 				</center>
 				<center>
-					<p style="word-spacing: 12px;font-size:16px;">By Providing Our Customers With Unmatched Quality Barcode Labels And Printers, We Always Believe In Making A Long-Term Relationship With Our Respected Customers. Our Wide Distribution Network
-						Helped Us In Dispatching The Offered Products At The Patrons End Within The Committed Frame Of Time. We Offer Our Customers Different Options Of Payment Such As Cash, Online, DD And Credit Card.</p>
+					<p style="word-spacing: 12px;font-size:18px;">By providing our customers with unmatched quality of Barcode & Product Labels and Printers, we always believe in making a long-term relationship with our respected customers. Our wide distribution network
+						helps us in dispatching the offered products at the patrons end within the committed frame of time. Also, deals with exporters and can deliver on a short notice. </p>
 				</center>
 			</div>
 		</div>
@@ -72,22 +72,22 @@
 					<div class="col-lg-4">
 						<div class="service_block">
 							<div class="service_icon delay-03s animated wow  zoomIn"> <span><i class="fa-book"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Well Documented</h3>
-							<p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+							<h3 class="animated fadeInUp wow">Quality Products</h3>
+							<p class="animated fadeInDown wow">Established with an aim to offer the superior quality products and services.</p>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="service_block">
 							<div class="service_icon icon2  delay-03s animated wow zoomIn"> <span><i class="fa-comments"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Friendly Support</h3>
-							<p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+							<h3 class="animated fadeInUp wow">Customer Satisfaction</h3>
+							<p class="animated fadeInDown wow">Customer satisfaction is always our first priority.</p>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="service_block">
 							<div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><i class="fa-rocket"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Launch Ready</h3>
-							<p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+							<h3 class="animated fadeInUp wow">Timely Delivery</h3>
+							<p class="animated fadeInDown wow">Backed by a wide connected network for delivering the products timely. </p>
 						</div>
 					</div>
 				</div>
@@ -95,22 +95,22 @@
 					<div class="col-lg-4">
 						<div class="service_block">
 							<div class="service_icon icon4 delay-03s animated wow  zoomIn"> <span><i class="fa-compress"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Fully Responsive</h3>
-							<p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+							<h3 class="animated fadeInUp wow">Bulk Orders</h3>
+							<p class="animated fadeInDown wow">We take corporate bulk orders and deliver on time.</p>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="service_block">
 							<div class="service_icon icon5  delay-03s animated wow zoomIn"> <span><i class="fa-eye"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Retina Ready</h3>
-							<p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+							<h3 class="animated fadeInUp wow">Technical Support</h3>
+							<p class="animated fadeInDown wow">We also provide technical support like software update, printer services ets.</p>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="service_block">
 							<div class="service_icon icon6  delay-03s animated wow zoomIn"> <span><i class="fa-cog"></i></span> </div>
-							<h3 class="animated fadeInUp wow">HTML5+CSS3</h3>
-							<p class="animated fadeInDown wow">Proin iaculis purus consequat sem cure digni. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+							<h3 class="animated fadeInUp wow">Responsiveness</h3>
+							<p class="animated fadeInDown wow">Willing to help customers and provide prompt service.</p>
 						</div>
 					</div>
 				</div>
@@ -247,9 +247,9 @@
 	<!--main-section-end-->
 
 
-	<section class="main-section" id="client_outer" style="padding-bottom:60px">
+	<!-- <section class="main-section" id="client_outer" style="padding-bottom:60px"> -->
 		<!--main-section client-part-start-->
-		<h2>Happy Clients</h2>
+		<!-- <h2>Happy Clients</h2>
 		<div class="client_area ">
 			<div class="client_section animated  fadeInUp wow">
 				<div class="client_profile">
@@ -278,5 +278,5 @@
 				<div class="clear"></div>
 			</div>
 		</div>
-	</section>
+	</section> -->
   <%- include("footer") -%>
