--- a/views/scannersoftware.ejs
+++ b/views/scannersoftware.ejs
@@ -14,9 +14,9 @@
         <p>1. High Strength </p>
         <p>2. Perfect Finish </p>
         <p>3. Various Size </p>
-        <p>4. Attractive Pattern </p>
-        <p>5. Easy To Use</p>
-        <p>6. Low Maintainance </p>
+        <!-- <p>4. Attractive Pattern </p> -->
+        <p>4. Easy To Use</p>
+        <p>5. Low Maintainance </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
