--- a/views/taglabels.ejs
+++ b/views/taglabels.ejs
@@ -1,6 +1,28 @@
 <%- include("header") -%>
 <img src="img/BANNER.png" alt=""><br><br>
-<h2>TAG LABELS</h2>
+<h2>WASHCARE LABELS</h2>
+<div class="product-item">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/tag2.png">
+      </div>
+      <div class="col-sm-8 wow fadeInLeft p-item" style="visibility: visible; animation-name: fadeInRight;">
+        <h2>WASHCARE LABELS</h2>
+        <p class="text-justify">Our Organization Is Passionately Engaged In Offering An Exclusive Array Of Washcare Labels To The Customers. These Products Are Made Using Best Quality Fabric And Ink.
+ </p>
+        <h3>Features:</h3>
+        <!-- <p>1. Easy To Use </p> -->
+        <p>1. Fast Color Printing </p>
+        <!-- <p>2. Various Shapes </p> -->
+        <p>2. Attractive Design </p>
+        <p>3. Different Sizes Available</p>
+        <p>4. Water Proof </p>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="product-item" style="background-color:#f7f7f7">
   <div class="container">
     <div class="row align-items-center">
@@ -9,42 +31,21 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>TAG LABELS</h2>
-        <p class="text-justify">Our Organization Is Passionately Engaged In Offering An Exclusive Array Of Tag Label To The Customers. These Products Are Made From High Quality Components.
+        <p class="text-justify">Our Organization Is Passionately Engaged In Offering An Exclusive Array Of Washcare Labels To The Customers. These Products Are Made Using Best Quality Material.
  </p>
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
-        <p>2. Crack Resistance </p>
-        <p>3. Various Shapes </p>
-        <p>4. Attractive Design </p>
-        <p>5. Different Sizes Available</p>
+        <!-- <p>2. Crack Resistance </p> -->
+        <p>2. Various Shapes </p>
+        <p>3. Attractive Design </p>
+        <p>4. Different Sizes Available</p>
         <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
   </div>
 </div>
-<div class="product-item">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/tag2.png">
-      </div>
-      <div class="col-sm-8 wow fadeInLeft p-item" style="visibility: visible; animation-name: fadeInRight;">
-        <h2>TAG LABELS</h2>
-        <p class="text-justify">Our Organization Is Passionately Engaged In Offering An Exclusive Array Of Tag Label To The Customers. These Products Are Made From High Quality Components.
- </p>
-        <h3>Features:</h3>
-        <p>1. Easy To Use </p>
-        <p>2. Crack Resistance </p>
-        <p>3. Various Shapes </p>
-        <p>4. Attractive Design </p>
-        <p>5. Different Sizes Available</p>
-        <p>6. Water Proof </p>
-        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
-      </div>
-    </div>
-  </div>
-</div>
+
 <!-- <div class="product-item" style="background-color:#f7f7f7">
   <div class="container">
     <div class="row align-items-center">
