--- a/views/thermalribbons.ejs
+++ b/views/thermalribbons.ejs
@@ -9,14 +9,14 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>THERMAL RIBBONS</h2>
-        <p class="text-justify">We Are Offering Awide Range Of Thermal Ribbons To Our Patrons. These Products Are Made From High Quality Components At Our Well-Equipped Manufacturing Unit. </p>
+        <p class="text-justify">We Are Offering A Wide Range Of Thermal Ribbons To Our Patrons. These Products Are Made From Best Quality Material. </p>
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
-        <p>2. Crack Resistance </p>
-        <p>3. Attractive Design </p>
-        <p>4. Various Shapes </p>
-        <p>5. Multi Colors</p>
-        <p>6. Water Proof </p>
+        <p>2. Scratch Resistance </p>
+        <!-- <p>3. Attractive Design </p> -->
+        <p>3. Various Sizes </p>
+        <p>4. Multiple Colors</p>
+        <p>5. Water Proof </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -30,13 +30,13 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>THERMAL RIBBONS</h2>
-        <p class="text-justify">We Are Offering Awide Range Of Thermal Ribbons To Our Patrons. These Products Are Made From High Quality Components At Our Well-Equipped Manufacturing Unit. </p>
+        <p class="text-justify">We Are Offering A Wide Range Of Thermal Ribbons To Our Patrons. These Products Are Made From Best Quality Material. </p>
         <h3>Features:</h3>
         <p>1. Easy To Use </p>
         <p>2. Scratch Resistance </p>
         <!-- <p>3. Attractive Design </p> -->
         <p>4. Various Sizes </p>
-        <p>5. Multi Colors</p>
+        <!-- <p>5. Multi Colors</p> -->
         <p>6. Water Proof </p>
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
 
