--- a/views/barcodelabels.ejs
+++ b/views/barcodelabels.ejs
@@ -5,6 +5,30 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/adhesive3.png">
+      </div>
+      <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
+        <h2>BARCODE PLAIN LABELS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Made Using Only Best Quality Adhesive Paper.  </p>
+        <h3>Features:</h3>
+        <p>1. Long Lasting </p>
+        <p>2. Fine Finish </p>
+        <p>3. Various Size </p>
+        <h3>Available:</h3>
+        <p>1. 2/1 Inch </p>
+        <p>2. 4/6 Inch </p>
+        <p>3. 3/1.5 Inch </p>
+        <p>4. 4/1.5 Inch And Many More </p>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
+
+      </div>
+    </div>
+  </div>
+</div>
+<div class="product-item" style="background-color:#f7f7f7">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
         <img src="img/blabel1.png">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
@@ -17,11 +41,7 @@
         <p>4. Attractive Pattern </p>
         <p>5. Different Sizes Available</p>
         <!-- <p>6. Water Proof </p> -->
-        <h3>Available:</h3>
-        <p>1. 2/1 Inch </p>
-        <p>2. 4/6 Inch </p>
-        <p>3. 3/1.5 Inch </p>
-        <p>4. 4/1.5 Inch And Many More </p>
+
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
     </div>
@@ -117,4 +137,24 @@
     </div>
   </div>
 </div>
+<div class="product-item">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
+        <img src="img/adhesive1.png">
+      </div>
+      <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
+        <h2>BARCODE PLAIN LABELS</h2>
+        <p class="text-justify">We Are Highly Engaged In Offering An Exclusive Assortment Of Adhesive Labels In The Nation. These Labels Are Made Using Only Best Quality Adhesive Paper.  </p>
+        <h3>Features:</h3>
+        <p>1. Long Lasting </p>
+        <p>2. Fine Finish </p>
+        <p>3. Various Size </p>
+        <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 <%- include("footer") -%>
