--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,20 +8,21 @@
 						<div class="col-lg-4">
 							<div class="contact_block">
 								<div class="contact_block_icon rollIn animated wow"><span><i class="fa-home"></i></span></div>
-								<span> 325 USA, <br>
-									NewYork, US, 57204 </span>
+								<span> B-68, First Floor, DSIDC, <br>
+									Jhilmil Industrial Area, Delhi-110095</span>
 							</div>
 						</div>
 						<div class="col-lg-4">
 							<div class="contact_block">
 								<div class="contact_block_icon icon2 rollIn animated wow"><span><i class="fa-phone"></i></span></div>
-								<span> 500-800-600-NOP </span>
+								<span> +91-9811572679 <br>
+											+91-8130612279</span>
 							</div>
 						</div>
 						<div class="col-lg-4">
 							<div class="contact_block">
 								<div class="contact_block_icon icon3 rollIn animated wow"><span><i class="fa-pencil"></i></span></div>
-								<span> <a href="info@Chitresh Enterprises.com"> info@Chitresh Enterprises.com</a> </span>
+								<span> <a href="info@Chitresh Enterprises.com">chitranshent@rediffmail.com</a> </span>
 							</div>
 						</div>
 					</div>
@@ -29,16 +30,17 @@
 				<div class="row">
 					<div class="col-lg-6 wow fadeInLeft">
 						<div class="contact-info-box address clearfix">
-							<h3>Don’t be hesitate. Say hello!</h3>
-							<p>Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper. Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper.</p>
-							<p>Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquampor id.</p>
+							<h3 style=" word-spacing: 12px;font-size:36px;">Don’t hesitate.<br> Say hello!</h3>
+							<!-- <p>Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper. Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper.</p> -->
+							<!-- <p>Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquampor id.</p> -->
 						</div>
 						<ul class="social-link">
-							<li class="twitter animated bounceIn wow delay-02s"><a href="javascript:void(0)"><i class="fa-twitter"></i></a></li>
-							<li class="facebook animated bounceIn wow delay-03s"><a href="javascript:void(0)"><i class="fa-facebook"></i></a></li>
-							<li class="pinterest animated bounceIn wow delay-04s"><a href="javascript:void(0)"><i class="fa-pinterest"></i></a></li>
-							<li class="gplus animated bounceIn wow delay-05s"><a href="javascript:void(0)"><i class="fa-google-plus"></i></a></li>
-							<li class="dribbble animated bounceIn wow delay-06s"><a href="javascript:void(0)"><i class="fa-dribbble"></i></a></li>
+							<!-- <li class="twitter animated bounceIn wow delay-02s"><a href="javascript:void(0)"><i class="fa-twitter"></i></a></li> -->
+							<li class="facebook animated bounceIn wow delay-03s"><a href="https://www.facebook.com/Chitransh-enterprises-160645950691732/"><i class="fa-facebook"></i></a></li>
+							<li class="instagram animated bounceIn wow delay-04s"><a href="https://www.instagram.com/chitranshenterprises/"><i class="fa-instagram"></i></a></li>
+							<!-- <li class="pinterest animated bounceIn wow delay-04s"><a href="javascript:void(0)"><i class="fa-pinterest"></i></a></li> -->
+							<!-- <li class="gplus animated bounceIn wow delay-05s"><a href="javascript:void(0)"><i class="fa-google-plus"></i></a></li> -->
+							<!-- <li class="dribbble animated bounceIn wow delay-06s"><a href="javascript:void(0)"><i class="fa-dribbble"></i></a></li> -->
 						</ul>
 					</div>
 					<div class="col-lg-6 wow fadeInUp delay-06s">
