--- a/views/header.ejs
+++ b/views/header.ejs
@@ -98,11 +98,14 @@
 							<div class="dropdown-menu dropdown-content " aria-labelledby="navbarDropdownMenuLink">
 								<a class="dropdown-item" href="barcodelabels">Barcode Labels</a>
 								<a class="dropdown-item" href="thermalribbons">Thermal Ribbons</a>
+								<a class="dropdown-item" href="adhesivelabels">Product Labels</a>
+								<a class="dropdown-item" href="taglabels">Washcare Labels</a>
+								<a class="dropdown-item" href="hololabels">Hologram Labels</a>
 								<a class="dropdown-item" href="gunlabels">Gun Labels</a>
 								<a class="dropdown-item" href="computerlabels">Computer Labels</a>
-								<a class="dropdown-item" href="taglabels">Tag Labels</a>
-								<a class="dropdown-item" href="hololabels">Hologram Labels</a>
-								<a class="dropdown-item" href="adhesivelabels">Adhesive Labels</a>
+
+
+
 							</div>
 						</li>
 						<li class="nav-item dropdown">
@@ -113,8 +116,8 @@
 								<a class="dropdown-item" href="barcodeprinters">Barcode Printers</a>
 								<a class="dropdown-item" href="barcodescanners">Barcode Scanners</a>
 								<a class="dropdown-item" href="billingprinters">Billing Printers</a>
-								<a class="dropdown-item" href="scannersoftware">Scanner with Software</a>
-								<a class="dropdown-item" href="scannerhardware">Scanner with Hardware</a>
+								<!-- <a class="dropdown-item" href="scannersoftware">Scanner with Software</a> -->
+								<!-- <a class="dropdown-item" href="scannerhardware">Scanner with Hardware</a> -->
 		 				</div>
 						</li>
 
