--- a/views/hololabels.ejs
+++ b/views/hololabels.ejs
@@ -9,13 +9,13 @@
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>HOLOGRAM LABELS</h2>
-        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Barcode Labels In The Market. </p>
+        <p class="text-justify">In Order To Suit The Various And Precise Requirements Of Our Esteemed Clients, Our Enterprise Is Dedicatedly Engaged In Providing Hologram Labels In The Market. </p>
         <h3>Features:</h3>
-        <p>1. Beautiful Design </p>
+        <p>1. Custom Made Design </p>
         <p>2. Fine Finish </p>
         <!-- <p>3. Lightweight </p> -->
-        <p>4. Attractive Pattern </p>
-        <p>5. Different Sizes Available</p>
+        <p>3. Attractive Pattern </p>
+        <p>4. Different Sizes Available</p>
         <!-- <p>6. Water Proof </p> -->
         <a href="/#contact"><button  type="button" class="btn btn-success btn-enq">SEND AN ENQUIRY</button></a>
       </div>
