--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -45,7 +45,7 @@
 					</div>
 					<div class="col-lg-6 wow fadeInUp delay-06s">
 						<div class="form">
-							<form class="" action="https://formsubmit.co/divy.j.140900@gmail.com" method="POST">
+							<form class="" action="https://formsubmit.co/chitranshent@rediffmail.com" method="POST">
 
 
 								<input class="input-text animated wow flipInY delay-02s" type="text" name="Name" value="Your Name *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
