--- a/views/barcodeprinters.ejs
+++ b/views/barcodeprinters.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/p2.png">
+        <img src="img/p2.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE PRINTERS</h2>
@@ -47,7 +47,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/bprinter2.png">
+        <img src="img/bprinter2.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE PRINTERS</h2>
@@ -68,7 +68,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/bprinter3.png">
+        <img src="img/bprinter3.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BARCODE PRINTERS</h2>
