--- a/views/gunlabels.ejs
+++ b/views/gunlabels.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/gunlabels.png">
+        <img src="img/gunlabels.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>GUN LABELS</h2>
