--- a/views/adhesivelabels.ejs
+++ b/views/adhesivelabels.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/adhesive2.png">
+        <img src="img/adhesive2.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>PRODUCT LABELS</h2>
@@ -32,7 +32,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/adhesive1.png">
+        <img src="img/adhesive1.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>ADHESIVE PLAIN LABELS</h2>
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/adhesive3.png">
+        <img src="img/adhesive3.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>ADHESIVE PLAIN LABELS</h2>
