--- a/views/billingprinters.ejs
+++ b/views/billingprinters.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/billing1.png">
+        <img src="img/billing1.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BILLING PRINTERS</h2>
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/billing2.png">
+        <img src="img/billing2.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BILLING PRINTERS</h2>
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/billing3.png">
+        <img src="img/billing3.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>BILLING PRINTERS</h2>
