--- a/views/taglabels.ejs
+++ b/views/taglabels.ejs
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInRight" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/tag2.png">
+        <img src="img/tag2.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInLeft p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>WASHCARE LABELS</h2>
@@ -27,7 +27,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm-4 text-center wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-        <img src="img/tag1.png">
+        <img src="img/tag1.png" class="zoom">
       </div>
       <div class="col-sm-8 wow fadeInRight p-item" style="visibility: visible; animation-name: fadeInRight;">
         <h2>TAG LABELS</h2>
