--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,8 +8,8 @@
 						<div class="col-lg-4">
 							<div class="contact_block">
 								<div class="contact_block_icon rollIn animated wow"><span><i class="fa-home"></i></span></div>
-								<span> B-68, First Floor, DSIDC, <br>
-									Jhilmil Industrial Area, Delhi-110095</span>
+								<a target="_blank" href="https://www.google.com/maps/place/28%C2%B040'28.4%22N+77%C2%B018'28.6%22E/@28.6745493,77.3057643,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x19f2559c6a7e39c5!8m2!3d28.6745493!4d77.307953?hl=en" style="color:white"> B-68, First Floor, DSIDC, <br>
+									Jhilmil Industrial Area, Delhi-110095</a>
 							</div>
 						</div>
 						<div class="col-lg-4">
@@ -22,7 +22,7 @@
 						<div class="col-lg-4">
 							<div class="contact_block">
 								<div class="contact_block_icon icon3 rollIn animated wow"><span><i class="fa-pencil"></i></span></div>
-								<span> <a href="info@Chitresh Enterprises.com">chitranshent@rediffmail.com</a> </span>
+								<span> <a target="_blank" href="info@Chitresh Enterprises.com">chitranshent@rediffmail.com</a> </span>
 							</div>
 						</div>
 					</div>
@@ -34,8 +34,8 @@
 						</div>
 						<ul class="social-link">
 							<!-- <li class="twitter animated bounceIn wow delay-02s"><a href="javascript:void(0)"><i class="fa-twitter"></i></a></li> -->
-							<li class="facebook animated bounceIn wow delay-03s"><a href="https://www.facebook.com/Chitransh-enterprises-160645950691732/"><i class="fa-facebook"></i></a></li>
-							<li class="instagram animated bounceIn wow delay-04s"><a href="https://www.instagram.com/chitranshenterprises/"><i class="fa-instagram"></i></a></li>
+							<li class="facebook animated bounceIn wow delay-03s"><a target="_blank" href="https://www.facebook.com/Chitransh-enterprises-160645950691732/"><i class="fa-facebook"></i></a></li>
+							<li class="instagram animated bounceIn wow delay-04s"><a target="_blank" href="https://www.instagram.com/chitranshenterprises/"><i class="fa-instagram"></i></a></li>
 						</ul>
 					</div>
 					<div class="col-lg-6 wow fadeInUp delay-06s">
