--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -22,7 +22,7 @@
 						<div class="col-lg-4">
 							<div class="contact_block">
 								<div class="contact_block_icon icon3 rollIn animated wow"><span><i class="fa-pencil"></i></span></div>
-								<span> <a target="_blank" href="info@Chitresh Enterprises.com">chitranshent@rediffmail.com</a> </span>
+								<span> chitranshent@rediffmail.com </span>
 							</div>
 						</div>
 					</div>
